--- a/www/styles.css
+++ b/www/styles.css
@@ -20,6 +20,7 @@
 	  justify-content: center;
 	  background-color: #24323c;
 	  width: 100% !important;
+	  margin-bottom: 20px;
 	}
 	.nav {
 		-ms-flexbox: 1;
@@ -122,4 +123,11 @@
   h2 {
     margin-top:0px!important;
     margin-bottom:0px!important;
+  }
+  
+  
+  /* for content */
+  .paramLabel {
+    display:"inline";
+    min-width: 100px;
   }
