--- a/www/stylesContent.css
+++ b/www/stylesContent.css
@@ -36,8 +36,30 @@
     display: flex;
   }
   
-  .plotPanel {
-    max-height:calc(100vh - 130px);
-    overflow: auto;
-    
+  
+  @media (min-width: 0px) {
+    .plotPanel {
+      height:calc(100vh - 422px);
+      overflow-y:auto;
+    }
   }
+  
+  @media (min-width: 768px) {
+    .plotPanel {
+      height:calc(100vh - 220px);
+      overflow-y:auto;
+    }
+  }
+  
+  @media (min-width: 973px) {
+    .plotPanel {
+      height:calc(100vh - 170px);
+      overflow-y:auto;
+    }
+  }
+  
+  .slider {
+    height:calc(100vh - 230px);
+    overflow-y: auto;
+  }
+  
